2011-01-07  James Robinson  <jamesr@chromium.org>

        Fix compile bustage due to bad merge in 75276.

        * page/animation/AnimationController.cpp:
        (WebCore::AnimationControllerPrivate::beginAnimationUpdateTime):

2010-12-17  Jer Noble  <jer@kokode.apple.com>

        Reviewed by Simon Fraser.

        Implement WebKit Full Screen support.
        https://bugs.webkit.org/show_bug.cgi?id=49481
        rdar://problem/8247444

        Mark for export all those WebCore functions needed by WebFullscreenController.

        * WebCore.exp.in:

2010-12-17  Jer Noble  <jer@kokode.apple.com>

        Reviewed by Simon Fraser.

        Implement WebKit Full Screen support.
        https://bugs.webkit.org/show_bug.cgi?id=49481
        rdar://problem/8247444
        
        screenRect is useful for more than just HTMLMediaElements.  Promote it into
        Element.

        * dom/Element.cpp: Moved into Element from HTMLMediaElement.
        * dom/Element.h: Ditto.
        * dom/Node.cpp:
        * html/HTMLMediaElement.cpp: Moved screenRect into Element.
        * html/HTMLMediaElement.h: Ditto.
        * WebCore.exp.in: Modify the exports list to reflect the new symbol name.

2010-12-17  Jer Noble  <jer@kokode.apple.com>

        Reviewed by Simon Fraser.

        Implement WebKit Full Screen support.
        https://bugs.webkit.org/show_bug.cgi?id=49481
        rdar://problem/8247444

        The RenderFullScreen is intended to be used by clients of that API to allow a DOM subtree to
        be rendered outside its original Frame. Because of this, there are a few areas of the
        rendering code which need to be special cased: RenderFullScreen layers should not be clipped
        to the viewport, as they will almost always be rendering outside the viewport area;
        RenderFullScreen graphics layers should not be reparented by the RenderLayerCompositor, as