@@ -2,6 +2,15 @@
 
         Unreviewed.
 
+        Minor change to check for null context
+
+        * win/lib/WebKitSystemInterface.lib:
+        * win/lib/WebKitSystemInterface_debug.lib:
+
+2011-01-07  Chris Marrin  <cmarrin@apple.com>
+
+        Unreviewed.
+
         Added one more API to WKSI to get the user data
         out of the CACFContext.
 
